# human-text

./: .gitignore  .pre-commit-config.yaml  MIGRATION_SUMMARY.md  README.md  example_llm_usage.py  pyproject.toml  requirements.txt  test_input.json  test_setup.py
doc/: CONFIG_FIX_SUMMARY.md  DEVELOPMENT.md  INDEX.md  MIGRATION_SUMMARY.md  MIRROR_CONFIG.md  dsl_compiler_README.md
dsl_compiler/: .pre-commit-config.yaml  DEVELOPMENT.md  README.md  REFACTORING_SUMMARY.md  __init__.py  cli.py  compiler.py  config.py  env.example  exceptions.py  lexer.py  llm_augmentor.py  models.py  optimizer.py  parser.py  preprocessor.py  requirements.txt  semantic_analyzer.py  serializer.py  setup.py  validator.py
example/: password_reset_dsl.txt  password_reset_dsl.yaml  test_inpu3t.json  test_input.txt  test_input.yaml
intermediate_results/: level_2_medium_natural_llm_generated_20250714_163912.dsl  level_2_medium_natural_llm_generated_20250714_163932.dsl  level_2_medium_natural_llm_generated_20250715_100752.dsl  level_2_medium_natural_llm_generated_20250715_100809.dsl  test_input_llm_generated_20250715_100514.dsl  test_input_llm_generated_20250715_100524.dsl
sop_test_cases/: level_1_simple_natural.txt  level_1_simple_natural.yaml  level_2_medium_natural.txt  level_2_medium_natural.yaml  level_3_complex_natural.txt  level_4_enterprise_natural.txt
sop_test_cases/llm_intermediate/: level_2_medium_natural_llm_generated_20250714_163420.dsl  level_2_medium_natural_llm_generated_20250714_163438.dsl  level_2_medium_natural_llm_generated_20250714_163630.dsl  level_2_medium_natural_llm_generated_20250714_163649.dsl  level_2_medium_natural_llm_generated_20250714_163730.dsl  level_2_medium_natural_llm_generated_20250714_163750.dsl
